a fix for the scroll jank on iOS chrome that causes the intro video to disappear and not return once you scroll past it

--- a/less/app.less
+++ b/less/app.less
@@ -12,6 +12,19 @@ html {
     -webkit-text-size-adjust: 100%;
 }
 
+.touchevents {
+
+    body {
+        overflow: hidden;
+    }
+
+    #story-wrapper {
+        position: relative;
+        height: 100vh;
+        overflow-y: auto;
+    }
+}
+
 body {
     opacity: 0;
     padding: 0;
